--- a/app/src/main/res/drawable/selector_button_green.xml
+++ b/app/src/main/res/drawable/selector_button_green.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/button_pressed"
+    <item android:drawable="@drawable/button_green_pressed"
           android:state_pressed="true" />
 
-    <item android:drawable="@drawable/button_focused"
+    <item android:drawable="@drawable/button_green_focused"
           android:state_focused="true" />
 
-    <item android:drawable="@drawable/button_normal" />
+    <item android:drawable="@drawable/button_green_normal" />
 
 </selector>
