--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,76 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="81dp">
 
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_push_down_size_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:text="8dp"
+            android:textColor="@android:color/white"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/line1"
+            app:layout_constraintEnd_toEndOf="@+id/line2"
+            app:layout_constraintStart_toStartOf="@+id/line1"
+            />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_push_down_size_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:text="8dp"
+            android:textColor="@android:color/white"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/line3"
+            app:layout_constraintEnd_toEndOf="@+id/line4"
+            app:layout_constraintStart_toStartOf="@+id/line3"/>
+
+        <View
+            android:id="@+id/line1"
+            android:layout_width="1dp"
+            android:layout_height="180dp"
+            android:background="@android:color/holo_green_light"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/music"
+            app:layout_constraintStart_toStartOf="@+id/music"
+            app:layout_constraintTop_toTopOf="@+id/music"
+            />
+
+        <View
+            android:id="@+id/line2"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:background="@android:color/holo_red_light"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/line1"
+            app:layout_constraintStart_toEndOf="@+id/line1"
+            app:layout_constraintTop_toTopOf="@+id/line1"
+            />
+
+        <View
+            android:id="@+id/line3"
+            android:layout_width="1dp"
+            android:layout_height="140dp"
+            android:background="@android:color/holo_green_light"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/button2"
+            app:layout_constraintStart_toStartOf="@+id/button1"
+            app:layout_constraintTop_toTopOf="@+id/button1"/>
+
+        <View
+            android:id="@+id/line4"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:background="@android:color/holo_red_light"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/line3"
+            app:layout_constraintStart_toEndOf="@+id/line3"
+            app:layout_constraintTop_toTopOf="@+id/line3"
+            />
+
 
         <Button
             android:id="@+id/button1"
@@ -22,6 +92,7 @@
             android:layout_marginTop="44dp"
             android:background="@drawable/selector_button_green"
             android:text="Push down Anim"
+            android:textColor="@android:color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/music"
@@ -31,8 +102,8 @@
             android:id="@+id/button2"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/selector_button_white"
             android:text="Push down Anim"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -62,6 +133,6 @@
 
         </FrameLayout>
 
-
     </android.support.constraint.ConstraintLayout>
+
 </android.support.v4.widget.NestedScrollView>
